welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var i=0
^Poucet:19: error: ';' expected but 'while' found.
	}while (croisement==false)
         ^Poucet:21: error: 'while' expected but identifier found.
avance() 
^Poucet:23: error: '(' expected but '}' found.
	}
        ^